# extractcode

./: .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  NOTICE  README.rst  azure-pipelines.yml  configure  configure.bat  extractcode  extractcode.ABOUT  extractcode.bat  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test-ci-mac.yml
docs/source/: conf.py  index.rst
src/extractcode/: __init__.py  androidappbundle.py  api.py  archive.py  cli.py  extract.py  libarchive2.py  patch.py  sevenzip.py  source_map.py  uncompress.py  vmimage.py
tests/: extractcode_assert_utils.py  test_androidappbundle.py  test_archive.py  test_extract.py  test_extractcode.py  test_extractcode_api.py  test_extractcode_cli.py  test_libarchive2.py  test_patch.py  test_sevenzip.py  test_vmimage.py
tests/data/archive/tgz/: mixed_case_and_symlink.tgz.expected.json
tests/data/archive/weird_names/: weird_names.7z_libarch_linux.expected  weird_names.cpio_libarch_mac.expected  weird_names.cpio_libarch_win.expected  weird_names.zip_libarch_mac.expected  weird_names.zip_libarch_win.expected
tests/data/cli/replace-originals/: issue6550.gz.ABOUT  rake.1.gz.ABOUT
tests/data/patch/patches/windows/: plugin explorer.patch.expected
tests/data/vmimage/: CHANGELOG.rst  bios-tables-test.x86_64.iso.qcow2.tar.gz.ABOUT
tests/extractcode/: extractcode_assert_utils.py  test_archive.py  test_extract.py  test_extractcode.py  test_extractcode_cli.py  test_libarchive2.py  test_sevenzip.py
