[metadata]
license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
name = extractcode
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A mostly universal archive extractor using z7zip, libarchve, other libraries and the Python standard library for reliable archive extraction.
long_description = file:README.rst
url = https://github.com/nexB/extractcode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords = 
    utilities
    archive
    extraction
    libarchive
    7zip
    scancode-toolkit

[options]
package_dir=
    =src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    commoncode >= 21.1.21
    plugincode >= 21.1.21
    typecode >= 21.1.21
    patch >= 1.16

setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
full =
    extractcode-7z >= 16.5.210122
    extractcode_libarchive >= 3.5.1.210122
    typecode[full] >= 21.1.21

testing =
    # upstream
    attr
    pytest >= 6
    pytest-xdist >= 2

docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1

[options.entry_points]
console-scripts =
    extractcode = extractcode.cli:extractcode
