[metadata]
name = extractcode
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A mostly universal archive extractor using 7zip, libarchive and the Python standard library for reliable archive extraction.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/extractcode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords = 
    utilities
    archive
    extraction
    libarchive
    7zip
    7z
    gzip
    bzip2
    xz
    lzma
    lz4
    lzip
    zstd
    Z
    tar
    xar
    ar
    cpio
    vmdk
    qcow2
    vhd
    iso
    deb
    cab
    rpm
    patch
    scancode-toolkit

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.6.*

install_requires =
    attrs >= 18.1, !=20.1.0
    commoncode >= 21.5.25
    plugincode >= 21.1.21
    typecode >= 21.6.1
    patch >= 1.16



[options.packages.find]
where = src


[options.extras_require]
full =
    extractcode-7z >= 16.5.210525
    extractcode_libarchive >= 3.5.1.210525
    typecode[full] >= 21.6.1

testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1

[options.entry_points]
console-scripts =
    extractcode = extractcode.cli:extractcode
