[metadata]
name = extractcode
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = A mostly universal archive extractor using 7zip, libarchive and the Python standard library for reliable archive extraction.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/extractcode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities
    archive
    extraction
    libarchive
    7zip
    7z
    gzip
    bzip2
    xz
    lzma
    lz4
    lzip
    zstd
    Z
    tar
    xar
    ar
    cpio
    vmdk
    qcow2
    vhd
    iso
    deb
    cab
    rpm
    patch
    scancode-toolkit

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

python_requires = >=3.7

install_requires =
    attrs >= 18.1,!=20.1.0;python_version<'3.11'
    attrs >= 22.1.0;python_version>='3.11'
    commoncode >= 31.0.2
    plugincode >= 32.0.0
    typecode >= 30.0.1

[options.packages.find]
where = src


[options.extras_require]
full =
    extractcode-7z >= 16.5.210525
    extractcode_libarchive >= 3.5.1.210525
    typecode[full] >= 30.0.1

patch =
    patch >= 1.16

testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort

docs =
    Sphinx == 5.1.0
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2

[options.entry_points]
console_scripts =
    extractcode = extractcode.cli:extractcode
